--- a/MedicineSchedule/MedicineSchedule/Pages/ReceptionsPage.xaml
+++ b/MedicineSchedule/MedicineSchedule/Pages/ReceptionsPage.xaml
@@ -1,13 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:MedicineSchedule.ViewModels"
+             xmlns:model="clr-namespace:MedicineSchedule.Models"
              x:Class="MedicineSchedule.Pages.ReceptionsPage"
+             x:DataType="local:ReceptionsListViewModel"
              Title="Приёмы лекарств">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Receptions!"
-                   VerticalOptions="CenterAndExpand" 
-                   HorizontalOptions="CenterAndExpand" />
+            <DatePicker x:Name="DatePicker" Date="{Binding Date}"/>
+            <RefreshView x:DataType="local:ReceptionsListViewModel" Command="{Binding LoadReceptionsCommand}" IsRefreshing="{Binding IsUpdating, Mode=TwoWay}">
+                <CollectionView x:Name="CoursesListView" ItemsSource="{Binding Receptions}" SelectionMode="None">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame>
+                                <StackLayout Padding="10" x:DataType="model:Reception">
+                                    <Label Text="{Binding Time, Mode=TwoWay}" 
+                                       LineBreakMode="NoWrap" 
+                                       Style="{DynamicResource ListItemTextStyle}" 
+                                       FontSize="16" />
+                                    <Label Text="{Binding CourseName, Mode=TwoWay}"
+                                       LineBreakMode="NoWrap" 
+                                       Style="{DynamicResource ListItemTextStyle}" 
+                                       FontSize="16" />
+                                    <StackLayout.GestureRecognizers>
+                                        <TapGestureRecognizer 
+                                        NumberOfTapsRequired="1"
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type local:CoursesListViewModel}}, Path=ShowCourseDetailsCommand}"		
+                                        CommandParameter="{Binding .}">
+                                        </TapGestureRecognizer>
+                                    </StackLayout.GestureRecognizers>
+                                </StackLayout>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </RefreshView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
