Provide course and reception into notification page

--- a/MedicineSchedule/MedicineSchedule/Pages/CoursesPage.xaml
+++ b/MedicineSchedule/MedicineSchedule/Pages/CoursesPage.xaml
@@ -31,5 +31,6 @@
         </RefreshView>
 
         <Button Text="Создать" Command="{Binding CreateCourseCommand}" />
+        <Button Text="Debug" Command="{Binding DebugCommand}" />
     </StackLayout>
 </ContentPage>
